--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
@@ -22,8 +23,11 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.30.2",
+    "@types/lodash": "^4.14.176",
     "ajv": "^8.8.0",
     "ajv-formats": "^2.1.1",
+    "bcryptjs": "^2.4.3",
     "bullmq": "^1.52.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -44,6 +48,8 @@
     "$middlewares": "dist/middlewares",
     "$controllers": "dist/controllers",
     "$validators": "dist/validators",
+    "$services": "dist/services",
+    "$models": "dist/models",
     "$types": "dist/types"
   }
 }
